Added lexica background and goals

--- a/index.html
+++ b/index.html
@@ -308,6 +308,29 @@
         </div>
         </div>
         <h3>Lexica</h3>
+        <h4>Background and Goals</h4>
+        <p>
+            Constructed languages (conlangs for short) are made up langauges, typically for a work of literature, such as Sindarin, Quenya, other languages by Tolkein, Klingon,
+            Dothraki, High Valyrian, etc. One method of creating a naturalistic constructed language is the diachronic approach. The irregularity and quirks that makes a langauge
+            seem authentic are driven by the evolution of the language through time, so the diacrhonic appraoch attempts to mimic that. The diacrhonic appraoch involves creating at
+            least two versions of the langauge, one earlier version (typically called the proto-lang) and later version(s), based on the earlier version(s). Allowing grammar rules
+            to vary with time creates a lot of good variation, but the majority of the changes are in the sound of the language.
+        </p>
+        <p>
+            The pronunciation of languages change with time, and each language changes differently, but the rules are very consistent within languages. Almost every word in Italian
+            went through the same systematic set of changes from it's original Latin source. French, Spanish, Romanian, and all the other romance languages each went through their
+            own set of changes to create the different characters of each language. A crucial part of the diachronic approach is defining the set of sound changes between versions of
+            the language, then applying those changes to each word in turn.
+        </p>
+        <p>
+            Mature conlangs can have thousands of words, so this process quickly gets tedious. There are already some online tools for writing these changes and applying them to words,
+            and these tools are very capable, however these tools are standalone webapps or similar. If I've created two hundred words, <i>then</i> decide I don't like my sound changes
+            (perhaps seeing two hundred words revealed a pattern I don't like), changing those sound changes requires rerunning the program on every word, another tedious and slow 
+            process. My goal with this project is to create an integrated sound change tool so that modifying the sound changes is as simple as editing the source, and it will be
+            automatically applied to every word. In addition, since I'm making the tool from scratch, I can add an array of other useful features, such as automatically declining
+            and conjugating words.
+        </p>
+        <h4>Status</h4>
         <h3>Rendering Projects</h3>
         <h3>Binary Palettes</h3>
         <div class="bp-content">
@@ -318,7 +341,7 @@
                     href="https://hansonbruel.com">My mother does art</a>, and one of her categories of work is called binary
                     palettes. In her words:
                 </p>
-                <div class="quote">This series grew out of thinking about how computers represent colors. As both a graphic designer and artist, 
+                <div class="quote"><p>This series grew out of thinking about how computers represent colors. As both a graphic designer and artist, 
                     I spend a lot of time seeing my real-world colors translated by a computer for onscreen viewing — sometimes not 
                     very accurately. This series of paintings reverses that process.
                     <br><br>
@@ -326,7 +349,7 @@
                     Each piece starts with a pattern of zeros and ones that determines the color palette, resulting in interesting 
                     and unexpected color relationships. While each string of digits defines a single, unchanging color to a computer, 
                     as an artist I can represent and interpret that color in infinite ways. In essence, my binary palettes are very poor
-                    translations of computer-generated colors.
+                    translations of computer-generated colors.</p>
                 </div>
                 <p>
                     This program allows takes those inputs and visualizes the colors. She uses it to design her works, but
