Added CSWA certificate

--- a/index.html
+++ b/index.html
@@ -358,6 +358,9 @@
             The frontend contains a dedicated tool for writing sound change code. It is fully syntax highlighted, reports compilation errors to you when typing, has rudimentry auto-
             formatting support, and contains an area for quick testing of code.
         </p>
+        <p>
+            <a href="https://github.com/charles-bruel/lexica">Source code for the project can be found here.</a>
+        </p>
         <h3>Rendering Projects</h3>
         <h3>Binary Palettes</h3>
         <div class="bp-content">
@@ -392,6 +395,7 @@
     <div class="spacer-container"><div class="spacer wave2"></div></div>
     <section id="eng">
         <h2>Engineering Portfolio</h2>
+        <img src="./media/ASSOCIATE - MECHANICAL DESIGN.png" class="center">
         <h3>Overview</h3>
         <h3>Swerve Module</h3>
     </section>
