Added bullet points to engineering

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin: 0px;
         }
 
-        p {
+        p, li {
             font-family: 'Nunito', sans-serif;
         }
 
@@ -397,6 +397,21 @@
         <h2>Engineering Portfolio</h2>
         <img src="./media/ASSOCIATE - MECHANICAL DESIGN.png" class="center">
         <h3>Overview</h3>
+        <p>
+            I studied Engineering Technology at Minuteman High School since my freshman year. My engineering experience includes:
+            <ul>
+                <li>
+                    Extensive CAD experience in Autodesk Inventor, SOLIDWORKS, Fusion 360, and Onshape, including earning my SOLIDWORKS 
+                    associate certification.
+                </li>
+                <li>Experience in CNC machining on routers, mills, and lathes. Use of Fusion 360 software for CAM.</li>
+                <li>Experience using 3D printers and laser cutters for rapid prototyping.</li>
+                <li>Experience designing for manufacturability.</li>
+                <li>Experience using Fusion 360 for stress simulations.</li>
+                <li>Experience with soldering and simple DC circuits.</li>
+                <li>Experience with industrial robotics and automation.</li>
+            </ul>
+        </p>
         <h3>Swerve Module</h3>
     </section>
 
