Partway through making engineering section

--- a/index.html
+++ b/index.html
@@ -412,7 +412,24 @@
                 <li>Experience with industrial robotics and automation.</li>
             </ul>
         </p>
+        <h3>Robotics Experience</h3>
+        <p>
+            I was a founding member of the schools <i>FIRST</i> Robotics Team, FRC 8604, in my sophomore year. In my sophomore year, I was
+            responsible for programming the Robot, and I also participated in design and CAD of the robot. In my junior year, I was also
+            responsible for leading CAD and most other technical aspects of the team. Now, in my senior year, I am the captain of the team,
+            so I organize and run trainings for CAD, programming, and prototyping.
+        </p>
+        <p>
+            The team's <a href="https://github.com/Team8604">github page</a> has all of our code from each year. I am the primary contributor
+            to every repo the team has.
+        </p>
+        <h4>CAD for robotics</h4>
+        <p>None of these models are entirely my own, but the ones I show have the vast majority of the work done by me.</p>
         <h3>Swerve Module</h3>
+        <p>
+            This is my senior project. A swerve drive a drivetrain system with 4 wheels, each indepedently powered and rotatable. Due to the
+            budget constraints, I made one of four modules that would make up a finished drive.
+        </p>
     </section>
 
     <script defer>//Shamelessly stolen from https://www.w3schools.com/howto/howto_js_image_comparison.asp
