Expanded on the swerve drive section

--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
                 </li>
                 <li>Experience in CNC machining on routers, mills, and lathes. Use of Fusion 360 software for CAM.</li>
                 <li>Experience using 3D printers and laser cutters for rapid prototyping.</li>
+                <li>Experience manually writing g-code.</li>
                 <li>Experience designing for manufacturability.</li>
                 <li>Experience using Fusion 360 for stress simulations.</li>
                 <li>Experience with soldering and simple DC circuits.</li>
@@ -414,7 +415,7 @@
         </p>
         <h3>Robotics Experience</h3>
         <p>
-            I was a founding member of the schools <i>FIRST</i> Robotics Team, FRC 8604, in my sophomore year. In my sophomore year, I was
+            I was a founding member of the school's <i>FIRST</i> Robotics Team, FRC 8604, in my sophomore year. In my sophomore year, I was
             responsible for programming the Robot, and I also participated in design and CAD of the robot. In my junior year, I was also
             responsible for leading CAD and most other technical aspects of the team. Now, in my senior year, I am the captain of the team,
             so I organize and run trainings for CAD, programming, and prototyping.
@@ -427,8 +428,19 @@
         <p>None of these models are entirely my own, but the ones I show have the vast majority of the work done by me.</p>
         <h3>Swerve Module</h3>
         <p>
-            This is my senior project. A swerve drive a drivetrain system with 4 wheels, each indepedently powered and rotatable. Due to the
-            budget constraints, I made one of four modules that would make up a finished drive.
+            My senior project is a swerve module for a swerve drive. A swerve drive a drivetrain system with 4 wheels, each indepedently powered 
+            and steered. This allows the swerve drive to move in any direction indepedent of the direction the robot is facing, and allows faster
+            positioning. Unlike some other drivetrain types that have similar maneuverability, the swerve drive actually aligns the wheels with the
+            direction of travel, as opposed to using fixed omni wheels or mecanum wheels. This means the robot is less suspectible to being pushed
+            around, and also means that all of the avaliable motor power is used.
+        </p>
+        <p>
+            Due to the budget constraints, I made one of four modules that would make up a finished drive. I began by making models in CAD. I
+            made 12 models of increasing viability and sophistication before arriving on my final model which I would make. I had several 
+            constraints and criteria for the model. First, it had to be usable in <i>FIRST</i> robotics, and connect to the robot using the
+            somewhat standard 2"x1" tube. Second, it had to have an absolute encoder to measure the rotation of the module. Homing it would be
+            too complicated before every match, especially for something as critical as the drive system. Finally, I had to minimize footprint
+            and mass.
         </p>
     </section>
 
