Added link to documentation

--- a/index.html
+++ b/index.html
@@ -383,7 +383,8 @@
             formatting support, and contains an area for quick testing of code.
         </p>
         <p>
-            <a href="https://github.com/charles-bruel/lexica">Source code for the project can be found here.</a>
+            <a href="https://github.com/charles-bruel/lexica">Source code for the project can be found here.</a><br>
+            <a href="lexica/frontend/src/documentation.html">Partial documentation for the sound change language can be found here.</a>
         </p>
         </div>
         <div>TODO: Replace me with picture of project in progress</div>
