Added screenshot for lexica

--- a/index.html
+++ b/index.html
@@ -387,7 +387,10 @@
             <a href="lexica/frontend/src/documentation.html">Partial documentation for the sound change language can be found here.</a>
         </p>
         </div>
-        <div>TODO: Replace me with picture of project in progress</div>
+        <div>
+            <img src="media/ps10.PNG">
+            <p>The program menu, where sound change code is written</p>
+        </div>
         <div class="lexica-example">
             <div style="grid-area:header">
                 <h4>Here is a full example of the sound changer</h4>
