Fix typo in example

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         [consonant] j => [+palatalized] * // $ _
     end
 
-    rule j-fortion
+    rule j-fortition
         j => ɟ / [vowel] _ [vowel]
         j => ɟ / $ _
     end
