Change color for engineering section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         }
 
         #eng {
-            background-color: #DC143C;
+            background-color: #cf5050;
         }
 
         .spacer-container {
